# iot-edge-demo

./: .gitignore  ARCHITECTURE.md  CICD.md  README.md  azure-pipelines.yml
deployment/: deployment.template.json  docker-compose.yml
infra/: main.bicep  main.bicepparam
infra/modules/: container-registry.bicep  iot-hub.bicep  log-analytics.bicep  monitor.bicep
modules/battery-module/: Dockerfile  main.py  pyproject.toml
modules/battery-module/src/: battery.py
modules/battery-module/tests/unit/: test_battery.py
modules/boiler-module/: Dockerfile  main.py  pyproject.toml
modules/boiler-module/src/: boiler.py
modules/boiler-module/tests/unit/: test_boiler.py
modules/controller-module/: Dockerfile  main.py  pyproject.toml  requirements.txt
modules/controller-module/src/: aggregator.py  dispatcher.py  registry.py
modules/controller-module/tests/unit/: test_aggregator.py  test_dispatcher.py  test_registry.py
modules/solar-module/: Dockerfile  main.py  pyproject.toml
modules/solar-module/src/: inverter.py  simulator.py
modules/solar-module/tests/integration/: test_module.py
modules/solar-module/tests/unit/: test_inverter.py  test_simulator.py
modules/telemetry-module/: Dockerfile  main.py  pyproject.toml
modules/telemetry-module/src/: exporter.py
modules/telemetry-module/tests/unit/: test_exporter.py
pipelines/templates/: build-module.yml  test-module.yml
shared/: pyproject.toml
shared/iot_edge_base/: __init__.py  asset.py  client.py  telemetry.py
